--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
       "axios-mock-adapter": "^1.18.1"
     },
     "dependencies": {
-      "axios": "^0.24.0"
+      "axios": "^0.24.0",
+      "dotenv": "^8.2.0"
     }
   }
